Fix position of emphasis marks on Firefox

--- a/src/sass/locale/_mixin.sass
+++ b/src/sass/locale/_mixin.sass
@@ -42,6 +42,12 @@
   -webkit-transform-origin: left top
   transform-origin:         left top
 
+=han-scale-center( $size )
+  -moz-transform:           scale( $size )
+  -ms-transform:            scale( $size )
+  -webkit-transform:        scale( $size )
+  transform:                scale( $size )
+
 =han-typo-reset
   +han-text-emphasis-internal( none )
   font-style:      normal
